Added link to github repo.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 		Created by <a href="https://github.com/julemarie">Jule Schmidt</a>
 		and <a href="http://tinoweinkauf.net">Tino Weinkauf</a>
 		for the course <a href="https://www.kth.se/student/kurser/kurs/DH2320">DH2320</a> / <a href="https://www.kth.se/student/kurser/kurs/DD2258">DD2258</a> at KTH.
-		Inspired by the visualizations in <a href="https://acegikmo.com">Freya Holmér</a>'s video <a href="https://www.youtube.com/watch?v=jvPPXbo87ds">The Continuity of Splines</a>.
+		Inspired by <a href="https://acegikmo.com">Freya Holmér</a>'s video <a href="https://www.youtube.com/watch?v=jvPPXbo87ds">The Continuity of Splines</a>.
 		Uses <a href="https://github.com/Zunawe">Bryce Wilson</a>'s <a href="https://github.com/Zunawe/bezier-spline">code for solving C2 Bézier splines</a>
 		and <a href="https://plotly.com/">Plotly</a>.
+		<a href="https://github.com/KTHVisualization/BezierSplinesContinuity">Code on github.</a>
 	</p>
 
 	<div id="plotCanvasContainer" class="main-plot-container">
