--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+	<!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+	<script type="text/javascript" src="plotly-2.29.0.min.js"></script>
 	<script type="text/javascript" src="bezierc2spline.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
