--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+	<title>Bézier Splines: Continuity</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
 	<script type="text/javascript" src="plotly-2.29.0.min.js"></script>
