Javascript is the only language and one shall not use type anymore.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Bézier Splines: Continuity</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
-	<script type="text/javascript" src="plotly-2.29.0.min.js"></script>
-	<script type="text/javascript" src="bezierc2spline.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<script src="plotly-2.29.0.min.js"></script>
+	<script src="bezierc2spline.js"></script>
+	<script src="script.js"></script>
 </head>
 
 <body>
