Added ability to show the Bézier curve instead of the spline.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	<div class="buttonArea">
 
 		<div id="ContinuityModes" class="toggle-buttons">
+	    <input type="radio" id="curve" value="5" name="contmode" />
+	    <label for="curve">Bézier Curve</label>
+
 	    <input type="radio" id="broken" value="0" name="contmode" checked="checked" />
 	    <label for="broken">Broken (C0)</label>
 
